--- a/통합과학2.md
+++ b/통합과학2.md
@@ -4,3 +4,7 @@
 3. 기린에서 목이 긴 개체로 변이가 일어났는데, 생존 경쟁 중 목이 긴 개체가 살아남아 자연 선택되었다.  
 4. 항생제 처리 전에 항생제 내성이 있는 세균으로 변이가 일어났는데, 항생제 처리 후 생존 경쟁에서 항생제 내성이 있는 세균이 살아남아 자연 선택되었다.  
 5. 낫 모양 적혈구 빈혈증이 있는 사람들이 말라리아 저항성을 가지고 있어 생존 경쟁에서 살아남아 말라리아 저항성을 가지고 있는 낫 모양 적혈구 빈혈증을 가지고 있는 사람들이 자연 선택되었기 때문이다.  
+### 104p ~ 105p
+6. 농경지에서는 특정 작물만 재배하여 종 다양성이 낮고, 해당 종에 대해서도 품종 개량을 하는 경우가 많아 유전적 다양성 또한 낮으며, 생태계 또한 한정되어 있어 생물 다양성이 낮아 급격한 환경 변화가 발생할 경우 멸종의 가능성이 높다.  
+7. (나), (가) 생태계에서는 뱀의 먹이가 개구리밖에 없어 개구리의 개체 수가 급격히 감소하면 뱀의 먹이가 크게 감소하여 뱀의 생존이 힘들고, 메뚜기와 벼 기준 생태계에서 상위를 차지하고 있는 뱀과 개구리의 개체 수가 줄어들면 일시적으로 메뚜기와 벼의 수가 늘어나지만, 먹이 경쟁이 치열해져 결국 메뚜기와 벼의 수 또한 감소하게 되어 생태계 평형이 깨지게 된다. 반면에, (나)의 생태계에서는 개구리의 개체 수가 급격히 감소하여도 뱀 등 개구리를 먹고 살았던 생물들은 다른 생물을 먹을 수 있기 때문에 생태계 평형의 유지가 비교적 잘 이루어진다고 할 수 있다.  
+8. 삼림 벌채는 다양한 생물의 서식지를 파괴하여 생물 다양성 감소의 원인이 된다.
