--- a/통합과학2.md
+++ b/통합과학2.md
@@ -13,3 +13,8 @@
 3. (1) 유지되고 있던 먹이사슬에 인간이 간섭하였기 때문이다.  
 (2) 늑대가 실질적으로 멸종 --> 개체 간 경쟁으로 나무 부족 --> 사슴 개체수 급격히 감소 --> 멸종된 늑대 복원 --> 사슴 감소 --> 나무 번성 --> 사슴 증가 --> 생태계 평형 회복  
 4. 옥상 정원을 통해 열섬 현상을 해결하고, 열대야와 생태계 파괴를 막는다.
+### 172p
+5. (1) 해수의 온도가 상승하여 이산화 탄소의 용해도가 감소하여 대기 중 이산화 탄소의 농도가 증가하여 지구 온난화가 가속되며, 평균 기온 상승으로 빙하의 면적이 감소하여 태양 에너지의 지표 반사율이 감소하여 지구 온난화가 가속되게 된다.  
+(2) 지구 온난화로 인해 빙하의 면적이 감소하여 해수면의 높이가 상승하며, 해수의 온도가 상승하며 부피가 커져 해수면의 높이가 상승하게 된다.  
+6. (1) 하강 기류가 주로 발생하여 강수량이 적기 떄문이다.  
+(2) 과잉 방목과 삼림 벌채가 있으며, 관련하여 법적 규제를 확충해야 하거나 과한 방목을 하지 않는다.
