--- a/통합과학2.md
+++ b/통합과학2.md
@@ -18,4 +18,7 @@
 5. (1) 해수의 온도가 상승하여 이산화 탄소의 용해도가 감소하여 대기 중 이산화 탄소의 농도가 증가하여 지구 온난화가 가속되며, 평균 기온 상승으로 빙하의 면적이 감소하여 태양 에너지의 지표 반사율이 감소하여 지구 온난화가 가속되게 된다.  
 (2) 지구 온난화로 인해 빙하의 면적이 감소하여 해수면의 높이가 상승하며, 해수의 온도가 상승하며 부피가 커져 해수면의 높이가 상승하게 된다.  
 6. (1) 하강 기류가 주로 발생하여 강수량이 적기 떄문이다.  
-(2) 과잉 방목과 삼림 벌채가 있으며, 관련하여 법적 규제를 확충해야 하거나 과한 방목을 하지 않는다.
+(2) 과잉 방목과 삼림 벌채가 있으며, 관련하여 법적 규제를 확충해야 하거나 과한 방목을 하지 않는다.  
+### 173p
+7. 에너지는 사용 과정에서 더 이상 사용할 수 없는 열에너지의 형태로 전환되므로 우리는 에너지를 효율적으로 이용해야 한다.  
+8. (1) Q~2~=10kJ-2kJ=8kJ, Q~3~=Q~2~-0.5kJ=8kJ-0.5kJ=7.5kJ
