--- a/통합과학2.md
+++ b/통합과학2.md
@@ -21,4 +21,4 @@
 (2) 과잉 방목과 삼림 벌채가 있으며, 관련하여 법적 규제를 확충해야 하거나 과한 방목을 하지 않는다.  
 ### 173p
 7. 에너지는 사용 과정에서 더 이상 사용할 수 없는 열에너지의 형태로 전환되므로 우리는 에너지를 효율적으로 이용해야 한다.  
-8. (1) Q~2~=10kJ-2kJ=8kJ, Q~3~=Q~2~-0.5kJ=8kJ-0.5kJ=7.5kJ
+8. (1) Q<sub>2</sub>=10kJ-2kJ=8kJ, Q<sub>3</sub>=Q<sub>2</sub>-0.5kJ=8kJ-0.5kJ=7.5kJ
