--- a/통합과학2.md
+++ b/통합과학2.md
@@ -22,4 +22,4 @@
 ### 173p
 7. 에너지는 사용 과정에서 더 이상 사용할 수 없는 열에너지의 형태로 전환되므로 우리는 에너지를 효율적으로 이용해야 한다.  
 8. (1) Q<sub>2</sub>=10kJ-2kJ=8kJ, Q<sub>3</sub>=Q<sub>2</sub>-0.5kJ=8kJ-0.5kJ=7.5kJ  
-(2) e<sub>(가)</sub>=$$ \frac {10kJ} {2kJ} $$=$$ \frac {5} {1} $$, e<sub>(나)</sub>=$$ \frac {10kJ} {2.5kJ} $$=$$ \frac {4} {1} $$, 따라서 $$ \frac {5} {1} $$:$$ \frac {4} {1} $$=4:5
+(2) e<sub>(가)</sub>=$$ \frac 10kJ 2kJ $$=$$ \frac {5} {1} $$, e<sub>(나)</sub>=$$ \frac {10kJ} {2.5kJ} $$=$$ \frac {4} {1} $$, 따라서 $$ \frac {5} {1} $$:$$ \frac {4} {1} $$=4:5
