--- a/통합과학2.md
+++ b/통합과학2.md
@@ -23,3 +23,9 @@
 7. 에너지는 사용 과정에서 더 이상 사용할 수 없는 열에너지의 형태로 전환되므로 우리는 에너지를 효율적으로 이용해야 한다.  
 8. (1) Q<sub>2</sub>=10kJ-2kJ=8kJ, Q<sub>3</sub>=Q<sub>2</sub>-0.5kJ=8kJ-0.5kJ=7.5kJ  
 (2) e<sub>(가)</sub>=2kJ/10kJ=1/5, e<sub>(나)</sub>=2.5kJ/10kJ=1/4, 따라서 1/5:1/4=4:5  
+## IV-2. 발전과 신재생 에너지
+### 226p
+1. (1) 도체 막대의 움직임에 따라 자기장의 단면적이 커지므로 유도 전류는 A 방향으로 형성되게 될 것이다.  
+(2) 속력 v가 증가하면 자기장의 변화가 빨라져 유도전류의 세기는 (1)에서보다 증가할 것이고, 방향은 변화가 없으므로 유도 전류의 방향은 (1)과 동일할 것이다.  
+2. (1) *직접 작성함*  
+(2) 유도전류의 방향은 60/2=30번 바뀌게 된다.
