--- a/통합과학2.md
+++ b/통합과학2.md
@@ -29,3 +29,6 @@
 (2) 속력 v가 증가하면 자기장의 변화가 빨라져 유도전류의 세기는 (1)에서보다 증가할 것이고, 방향은 변화가 없으므로 유도 전류의 방향은 (1)과 동일할 것이다.  
 2. (1) *직접 작성함*  
 (2) 유도전류의 방향은 60/2=30번 바뀌게 된다.
+### 227p
+3. (1) 가로축인 I<sub>0</sub>와 세로축인 V<sub>0</sub>의 곱인 I<sub>0</sub>V<sub>0</sub>=P<sub>손실</sub>이 된다. 즉, 손실 전력을 나타낸다.  
+(2) 손실 전력 P<sub>0</sub>=V<sup>2</sup>/R이므로 B의 면적, 즉 손실 전력이 P<sub>0</sub>/2가 되면 송전 전압은 P<sub>0</sub>R/2이 된다.
