--- a/통합과학2.md
+++ b/통합과학2.md
@@ -33,3 +33,6 @@
 3. (1) 가로축인 I<sub>0</sub>와 세로축인 V<sub>0</sub>의 곱인 I<sub>0</sub>V<sub>0</sub>=P<sub>손실</sub>이 된다. 즉, 손실 전력을 나타낸다.  
 (2) 손실 전력 P<sub>0</sub>=V<sup>2</sup>/R이므로 B의 면적, 즉 손실 전력이 P<sub>0</sub>/2가 되면 송전 전압은 P<sub>0</sub>R/2이 된다.  
 4. ⭐️
+### 228p
+5. (1) ㄱ은 핵융합 반응에 속하고, ㄴ은 핵분열 반응에 속한다. ㄱ과 ㄴ에서 모두 질량 결손(질량이 감소)에 의해 에너지를 방출한다.  
+(2) 56을 기준으로 56보다 작으면 핵융합, 크면 핵분열 반응을 이용하면 된다.
