--- a/통합과학2.md
+++ b/통합과학2.md
@@ -36,3 +36,6 @@
 ### 228p
 5. (1) ㄱ은 핵융합 반응에 속하고, ㄴ은 핵분열 반응에 속한다. ㄱ과 ㄴ에서 모두 질량 결손(질량이 감소)에 의해 에너지를 방출한다.  
 (2) 56을 기준으로 56보다 작으면 핵융합, 크면 핵분열 반응을 이용하면 된다.  
+### 229p
+6. (1) 안산, 조수 간만의 차가 가장 크기 때문이다.  
+(2) 대관령, 평균 풍속이 가장 세기 때문이다.
